Stretch bug fix

--- a/css/mystyle.css
+++ b/css/mystyle.css
@@ -8,11 +8,10 @@
 
 .header-menu{
 	z-index:10;
-	position: absolute;
+	position: relative;
 	width:100%;
 	background-color: #000	;
 	top:20vw;
-	max-height: 60px;
 }
 
 
